Fixed popups z-index

--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -9,6 +9,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 1;
 }
 
 .sign-in-card {
